--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,104 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.ui.activities.LoginActivity">
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardview_logo_login"
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:layout_marginTop="-64dp"
-        android:layout_marginBottom="-32dp"
-        android:layout_alignParentTop="true"
-        app:cardCornerRadius="64dp"
-        android:elevation="@dimen/cardview_default_elevation"
-        android:backgroundTint="@color/color_primary">
+    xmlns:tools="http://schemas.android.com/tools">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="125dp"
-            android:layout_height="125dp"
-            android:src="@drawable/logo_miskiatty_blanco"
-            android:layout_marginTop="16dp"
-            android:layout_gravity="center"/>
+    <data>
+        <variable
+            name="loginViewModel"
+            type="com.listen.to.miskiatty.viewmodel.LoginViewModel" />
+    </data>
 
-        <View
-            android:layout_width="175dp"
-            android:layout_height="175dp"
-            android:background="@drawable/sp_oval_white"
-            android:layout_marginTop="16dp"
-            android:layout_gravity="center"/>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/cardview_logo_login"
-        android:layout_marginBottom="-64dp"
-        app:cardCornerRadius="64dp"
-        android:elevation="@dimen/cardview_default_elevation">
+        tools:context=".view.ui.activities.LoginActivity">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_logo_login"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:layout_marginTop="-64dp"
+            android:layout_marginBottom="-32dp"
+            android:layout_alignParentTop="true"
+            app:cardCornerRadius="64dp"
+            android:elevation="@dimen/cardview_default_elevation"
+            android:backgroundTint="@color/color_primary">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="125dp"
+                android:layout_height="125dp"
+                android:src="@drawable/logo_miskiatty_blanco"
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center" />
+
+            <View
+                android:layout_width="175dp"
+                android:layout_height="175dp"
+                android:background="@drawable/sp_oval_white"
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="30dp">
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Iniciar Sesión"
-                android:textSize="28sp"
-                android:textColor="@color/color_primary"
-                android:gravity="center"
-                android:textAllCaps="true"/>
+            android:layout_below="@id/cardview_logo_login"
+            android:layout_marginBottom="-64dp"
+            app:cardCornerRadius="64dp"
+            android:elevation="@dimen/cardview_default_elevation">
 
-            <com.google.android.material.textfield.TextInputLayout
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="Usuario"
-                app:startIconDrawable="@drawable/ic_baseline_person_24"
-                app:endIconMode="clear_text"
-                app:errorEnabled="true">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_user_login"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="30dp">
+
+                <com.google.android.material.textview.MaterialTextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
-                    android:lines="1" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_marginTop="24dp"
+                    android:text="Iniciar Sesión"
+                    android:textSize="28sp"
+                    android:textColor="@color/color_primary"
+                    android:gravity="center"
+                    android:textAllCaps="true" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="Contraseña"
-                app:startIconDrawable="@drawable/ic_baseline_lock_24"
-                app:endIconMode="password_toggle"
-                app:errorEnabled="true">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:hint="Usuario"
+                    app:startIconDrawable="@drawable/ic_baseline_person_24"
+                    app:endIconMode="clear_text"
+                    app:errorEnabled="true">
+
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_password_login"
+                        android:id="@+id/user"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textEmailAddress"
+                        android:lines="1" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:hint="Contraseña"
+                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
+                    app:endIconMode="password_toggle"
+                    app:errorEnabled="true">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPassword"
                         android:lines="1" />
-            </com.google.android.material.textfield.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/bt_login"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Iniciar Sesión"
-                android:backgroundTint="@color/color_dark"
-                android:layout_gravity="center"/>
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/bt_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Iniciar Sesión"
+                    android:backgroundTint="@color/color_dark"
+                    android:layout_gravity="center"
+                    android:onClick="@{() -> loginViewModel.onClickLoginListener(user.getText().toString(), password.getText().toString())}"/>
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
-    </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
