--- a/app/src/main/res/drawable/layerlist_splash.xml
+++ b/app/src/main/res/drawable/layerlist_splash.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/color_dark"/>
+    <item android:drawable="@color/colorPrimaryDark"/>
     <item
         android:width="125dp"
         android:height="125dp"
         android:gravity="center"
-        android:drawable="@drawable/logo_miskiatty_blanco" />
+        android:drawable="@drawable/ic_logo_miskiatty" />
 
     <item
         android:width="175dp"
