--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,12 +23,12 @@
             android:layout_alignParentTop="true"
             app:cardCornerRadius="64dp"
             android:elevation="@dimen/cardview_default_elevation"
-            android:backgroundTint="@color/color_primary">
+            android:backgroundTint="@color/colorPrimary">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="125dp"
                 android:layout_height="125dp"
-                android:src="@drawable/logo_miskiatty_blanco"
+                android:src="@drawable/ic_logo_miskiatty"
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center" />
 
@@ -61,7 +61,7 @@
                     android:layout_marginTop="24dp"
                     android:text="Iniciar Sesión"
                     android:textSize="28sp"
-                    android:textColor="@color/color_primary"
+                    android:textColor="@color/colorPrimary"
                     android:gravity="center"
                     android:textAllCaps="true" />
 
@@ -107,7 +107,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="Iniciar Sesión"
-                    android:backgroundTint="@color/color_dark"
+                    android:backgroundTint="@color/colorPrimaryDark"
                     android:layout_gravity="center"
                     android:onClick="@{() -> loginViewModel.onClickLoginListener(user.getText().toString(), password.getText().toString())}"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
