--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#f48fb1</color>
-    <color name="color_light">#ffc1e3</color>
-    <color name="color_dark">#bf5f82</color>
+    <color name="colorPrimary">@color/mauvelous</color>
+    <color name="colorAccent">@color/cottonCandy</color>
+    <color name="colorPrimaryDark">@color/royalHeath</color>
+
+    <color name="mauvelous">#f48fb1</color>
+    <color name="cottonCandy">#ffc1e3</color>
+    <color name="royalHeath">#bf5f82</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
