--- a/app/src/main/res/layout/activity_client_details.xml
+++ b/app/src/main/res/layout/activity_client_details.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ui.activities.ClientDetailsActivity">
+    tools:context=".view.ui.clients.ClientDetailsActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
