--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.ui.activities.LoginActivity">
+        tools:context=".view.ui.login.LoginActivity">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardview_logo_login"
@@ -66,6 +66,7 @@
                     android:textAllCaps="true" />
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/user"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -76,7 +77,6 @@
                     app:errorEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/user"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textEmailAddress"
@@ -84,6 +84,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
@@ -94,7 +95,6 @@
                     app:errorEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPassword"
@@ -109,7 +109,7 @@
                     android:text="Iniciar Sesión"
                     android:backgroundTint="@color/colorPrimaryDark"
                     android:layout_gravity="center"
-                    android:onClick="@{() -> loginViewModel.onClickLoginListener(user.getText().toString(), password.getText().toString())}"/>
+                    android:onClick="@{() -> loginViewModel.onClickLoginListener(user, password)}"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
 
         </androidx.cardview.widget.CardView>
