--- a/app/src/main/res/layout/activity_product_add.xml
+++ b/app/src/main/res/layout/activity_product_add.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ui.activities.ProductAddActivity">
+    tools:context=".view.ui.products.ProductAddActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
