Product layout listo y solución de un error de implementación en el navigation del bottom nav.
- Collapsing Toolbar y recycler view.
- Solución de implementación del bottom navigation. (no se había colocado el id del fragment en el del icon)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 
         <fragment
             android:name="androidx.navigation.fragment.NavHostFragment"
-            android:id="@+id/fr_forAllFragments_main"
+            android:id="@+id/fr_navHost"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
