--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,15 +2,23 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Estadística"
+    <item
+        android:id="@+id/statisticsFragment"
+        android:title="Estadística"
         android:icon="@drawable/ic_round_data_24"/>
 
-    <item android:title="Clientes"
+    <item
+        android:id="@+id/clientsFragment"
+        android:title="Clientes"
         android:icon="@drawable/ic_baseline_person_24"/>
 
-    <item android:title="Productos"
+    <item
+        android:id="@+id/productsFragment"
+        android:title="Productos"
         android:icon="@drawable/ic_baseline_cake_24"/>
 
-    <item android:title="Pedidos"
+    <item
+        android:id="@+id/ordersFragment"
+        android:title="Pedidos"
         android:icon="@drawable/ic_baseline_list_24"/>
 </menu>
