Flujo del Data Binding para el recycler view listo.
- Solucionar el error que no se visualiza la data en el recycler.

--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -41,7 +41,7 @@
                 android:layout_height="match_parent"
                 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:setAdapter="@{productViewModel}" />
+                app:setAdapter="@{productViewModel.recyclerProductsAdapter}" />
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </FrameLayout>
