--- a/app/src/main/res/layout/template_product.xml
+++ b/app/src/main/res/layout/template_product.xml
@@ -4,7 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="position"
+            type="Integer" />
 
+        <variable
+            name="productViewModel"
+            type="com.listen.to.miskiatty.viewmodel.ProductViewModel" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -28,6 +34,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@{productViewModel.getProductAt(position).name}"
                 tools:text="Producto"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -41,6 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
+                android:text="@{Float.toString(productViewModel.getProductAt(position).price)}"
                 tools:text="S/20"
                 android:textSize="24sp"
                 android:textStyle="bold"
