Holdeo y visualización correcta del recycler view.
- Se debía declarar el adapter antes de llamar a los primeros datos, porque sino los datos se cargaban en un adapter null.

--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -37,11 +37,12 @@
             </com.google.android.material.appbar.AppBarLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_products"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:setAdapter="@{productViewModel.recyclerProductsAdapter}" />
+                app:setAdapter="@{productViewModel.recyclerProductsAdapter}"/>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </FrameLayout>
