--- a/app/src/main/res/layout/template_product.xml
+++ b/app/src/main/res/layout/template_product.xml
@@ -28,7 +28,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:src="@drawable/ic_launcher_background"
+                android:src="@drawable/ic_launcher_background"
                 android:scaleType="centerCrop" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="@{Float.toString(productViewModel.getProductAt(position).price)}"
+                android:text='@{"S/" + productViewModel.getProductAt(position).price}'
                 tools:text="S/20"
                 android:textSize="24sp"
                 android:textStyle="bold"
