UI product details, lista.
- El siguiente paso, es la implementación de los onClick (mediante bind data y MVVM) para dirigir al usuario a la respectiva vista.

--- a/app/src/main/res/layout/activity_product_add.xml
+++ b/app/src/main/res/layout/activity_product_add.xml
@@ -24,7 +24,8 @@
                 android:background="@color/white"
                 app:title="Nuevo Producto"
                 style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
-                app:menu="@menu/menu_products_add" />
+                app:menu="@menu/menu_product_add" />
+
         </com.google.android.material.appbar.AppBarLayout>
 
         <ScrollView
@@ -55,7 +56,7 @@
                     android:id="@+id/product"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="24dp"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:hint="Producto"
                     app:startIconDrawable="@drawable/ic_baseline_cake_24"
@@ -142,4 +143,5 @@
         </ScrollView>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
 </layout>
