Implementación del flujo de navegación a través de los diferentes toolbar (add y product details).

--- a/app/src/main/res/layout/activity_product_add.xml
+++ b/app/src/main/res/layout/activity_product_add.xml
@@ -18,11 +18,13 @@
             android:layout_height="wrap_content"
             android:elevation="8dp">
 
-            <androidx.appcompat.widget.Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar_product_add"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/white"
                 app:title="Nuevo Producto"
+                app:navigationIcon="@drawable/ic_baseline_close_24"
                 style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                 app:menu="@menu/menu_product_add" />
 
@@ -66,7 +68,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textEmailAddress"
+                        android:inputType="text"
                         android:lines="1" />
 
                 </com.google.android.material.textfield.TextInputLayout>
