--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,31 +7,89 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".view.ui.activities.MainActivity">
+   <androidx.drawerlayout.widget.DrawerLayout
+       android:id="@+id/drawerLayout_main"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-        <fragment
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:id="@+id/fr_navHost"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/main_navigation" />
+       <androidx.constraintlayout.widget.ConstraintLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           tools:context=".view.ui.activities.MainActivity">
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bnv_main"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:elevation="8dp"
-            android:background="@drawable/sp_rounded_top_rectangle"
-            app:menu="@menu/menu_bottom_navigation" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+           <com.google.android.material.appbar.AppBarLayout
+               android:id="@+id/appbarLayout_main"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               app:layout_constraintTop_toTopOf="parent"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintEnd_toEndOf="parent">
+
+               <com.google.android.material.appbar.MaterialToolbar
+                   android:id="@+id/toolbar_main"
+                   android:layout_width="match_parent"
+                   android:layout_height="?attr/actionBarSize"
+                   android:background="@color/white"
+                   style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary" />
+
+           </com.google.android.material.appbar.AppBarLayout>
+
+           <fragment
+               android:id="@+id/fr_navHost"
+               android:name="androidx.navigation.fragment.NavHostFragment"
+               android:layout_width="0dp"
+               android:layout_height="0dp"
+               app:defaultNavHost="true"
+               app:layout_constraintBottom_toBottomOf="parent"
+               app:layout_constraintEnd_toEndOf="parent"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintTop_toBottomOf="@+id/appbarLayout_main"
+               app:navGraph="@navigation/main_navigation" />
+
+           <com.google.android.material.bottomnavigation.BottomNavigationView
+               android:id="@+id/bnv_main"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               app:layout_constraintBottom_toBottomOf="parent"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintEnd_toEndOf="parent"
+               android:elevation="8dp"
+               android:background="@drawable/sp_rounded_top_rectangle"
+               app:menu="@menu/menu_main" />
+
+       </androidx.constraintlayout.widget.ConstraintLayout>
+
+       <com.google.android.material.navigation.NavigationView
+           android:id="@+id/navView_main"
+           android:layout_width="wrap_content"
+           android:layout_height="match_parent"
+           android:layout_gravity="start"
+           app:menu="@menu/menu_main">
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent">
+
+               <com.google.android.material.textview.MaterialTextView
+                   android:layout_gravity="bottom"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:text="Ajustes"
+                   android:textColor="@color/black"
+                   android:textSize="14sp"
+                   android:textStyle="bold"
+                   android:gravity="start|center"
+                   android:layout_marginBottom="12sp"
+                   android:layout_marginStart="24sp"
+                   app:drawableLeftCompat="@drawable/ic_baseline_settings_24"
+                   app:drawableTint="@color/black"
+                   android:drawablePadding="16dp"
+                   android:clickable="true"
+                   android:focusable="true" />
+
+           </LinearLayout>
+       </com.google.android.material.navigation.NavigationView>
+
+   </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
