Data binding para las imágenes de los productos.
- Solicitud de permiso para acceder al almacenamiento del dispositivo.
- Ya se pueden agregar imágenes guardadas internamente en el dispositivo.
- Puede visualizarse en el recycler view, agregar y detalles del producto.

Mejoras:
- Poder editar el producto.
- Verificar que los campos ingresados en el añadir producto no sean vacíos.

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -43,19 +43,15 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="8dp"
-                    android:elevation="@dimen/cardview_default_elevation">
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_launcher_background" />
-
-                </androidx.cardview.widget.CardView>
+                 <androidx.appcompat.widget.AppCompatImageView
+                     android:id="@+id/btImage"
+                     android:layout_width="match_parent"
+                     android:layout_height="200dp"
+                     android:layout_margin="2dp"
+                     srcBitmap="@{productDetailsViewModel.product.image}"
+                     android:background="@drawable/sp_rounded_rectangle"
+                     android:elevation="@dimen/cardview_default_elevation"
+                     android:scaleType="centerCrop" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="match_parent"
