--- a/app/src/main/res/layout/activity_product_add.xml
+++ b/app/src/main/res/layout/activity_product_add.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="productAddViewModel"
+            type="com.listen.to.miskiatty.viewmodel.ProductAddViewModel" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -40,19 +42,16 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-                <androidx.cardview.widget.CardView
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/btImage"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="8dp"
-                    android:elevation="@dimen/cardview_default_elevation">
-
-                    <androidx.appcompat.widget.AppCompatImageButton
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:backgroundTint="@color/white"
-                        android:src="@drawable/ic_baseline_image_60" />
-
-                </androidx.cardview.widget.CardView>
+                    android:layout_height="200dp"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/sp_rounded_rectangle"
+                    android:elevation="@dimen/cardview_default_elevation"
+                    app:srcCompat="@drawable/ic_baseline_image_60"
+                    android:scaleType="center"
+                    android:onClick="@{() -> productAddViewModel.onClickPickImage(context)}"/>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/product"
