--- a/app/src/main/res/layout/template_product.xml
+++ b/app/src/main/res/layout/template_product.xml
@@ -17,18 +17,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
-        android:layout_marginHorizontal="16dp">
+        android:layout_marginHorizontal="14dp">
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:elevation="@dimen/cardview_default_elevation"
+            android:layout_margin="2dp"
             app:cardCornerRadius="8dp">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_launcher_background"
+                tools:src="@drawable/ic_launcher_background"
+                srcBitmap="@{productViewModel.getProductAt(position).image}"
                 android:scaleType="centerCrop" />
 
             <androidx.appcompat.widget.AppCompatTextView
