--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -29,7 +29,7 @@
                 app:title="Producto"
                 app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                 style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
-                app:menu="@menu/menu_product_details" />
+                app:menu="@menu/menu_details" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
