--- a/app/src/main/res/layout/fragment_clients.xml
+++ b/app/src/main/res/layout/fragment_clients.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="clientViewModel"
+            type="com.listen.to.miskiatty.viewmodel.ClientViewModel" />
     </data>
 
     <FrameLayout
@@ -41,7 +43,7 @@
                         android:layout_height="match_parent"
                         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        app:setAdapter="@{}"/>
+                        app:setAdapter="@{clientViewModel.recyclerTopClientsAdapter}"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
@@ -66,7 +68,7 @@
                         android:paddingBottom="60dp"
                         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        app:setAdapter="@{}"/>
+                        app:setAdapter="@{clientViewModel.recyclerClientsAdapter}"/>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -79,7 +81,8 @@
                 android:layout_gravity="bottom|end"
                 android:layout_margin="16dp"
                 android:src="@drawable/ic_baseline_add_24"
-                android:contentDescription="Añadir Clientes"/>
+                android:contentDescription="Añadir Clientes"
+                android:onClick="@{() -> clientViewModel.onClickAddClients(context)}"/>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </FrameLayout>
 </layout>
