--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="productViewModel"
-            type="com.listen.to.miskiatty.viewmodel.ProductViewModel" />
+            type="com.listen.to.miskiatty.viewmodel.ClientViewModel" />
     </data>
 
     <FrameLayout
